<resources>
    <string name="app_name">Christmas Countdown</string>
    <string name="countdown">There are only</string>
    <string name="countdownleft">till Christmas!</string>
    <string name="christmas_msg">Merry Christmas!!</string>
    <string name="label_days">Days</string>
    <string name="label_hours">Hours</string>
    <string name="label_minutes">Minutes</string>
    <string name="label_seconds">Seconds</string>
</resources>
